clean up code, some fixes, tests