@@ -10,6 +10,7 @@ import com.school.service.StudentService;
 import com.school.service.TeacherService;
 import jakarta.persistence.EntityExistsException;
 import jakarta.persistence.EntityNotFoundException;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
@@ -18,7 +19,6 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -40,63 +40,74 @@ class SubjectServiceImplTest {
     @InjectMocks
     private SubjectServiceImpl subjectService;
 
+    private Subject subject1;
+    private Subject subject2;
+
+    private SubjectRequest subjectRequest1;
+    private SubjectRequest subjectRequest2;
+
+    private Teacher teacher;
+    private Student student;
+
+    @BeforeEach
+    void setUp() {
+        subject1 = new Subject();
+        subject1.setName("Math");
+        subject1.setId(1);
+
+        subject2 = new Subject();
+        subject2.setName("Philosophy");
+        subject2.setId(2);
+
+        subjectRequest1 = new SubjectRequest();
+        subjectRequest1.setName("Math");
+
+        subjectRequest2 = new SubjectRequest();
+        subjectRequest2.setName("Math");
+
+        teacher = new Teacher(new User("Vlad", "Bulakovskyi", "vlad1@gmail.com", "Vlad123"));
+        teacher.setId(1);
+
+        student = new Student(new User("Vlad", "Bulakovskyi", "vlad2@gmail.com", "Vlad123"));
+        student.setId(1);
+    }
+
     @Test
     void create() {
-        //given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        SubjectRequest subjectRequest = new SubjectRequest();
-        subjectRequest.setName("Math");
         // when
-        subjectService.create(subjectRequest);
+        subjectService.create(subjectRequest1);
 
         //then
         ArgumentCaptor<Subject> subjectArgumentCaptor = ArgumentCaptor.forClass(Subject.class);
         verify(subjectRepository).save(subjectArgumentCaptor.capture());
         Subject capturedSubject = subjectArgumentCaptor.getValue();
 
-        assertThat(capturedSubject).isEqualTo(subject);
+        assertThat(capturedSubject.getName()).isEqualTo(subject1.getName());
     }
 
     @Test
     void createWithExistsSubject() {
-        //given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        SubjectRequest subjectRequest = new SubjectRequest();
-        subjectRequest.setName("Math");
         // when
-        subjectService.create(subjectRequest);
-        when(subjectRepository.findByName("Math")).thenReturn(Optional.of(subject));
+        subjectService.create(subjectRequest1);
+        when(subjectRepository.findByName(subject1.getName())).thenReturn(Optional.of(subject1));
 
-        assertThrowsExactly(EntityExistsException.class, () -> subjectService.create(subjectRequest));
+        assertThrowsExactly(EntityExistsException.class, () -> subjectService.create(subjectRequest1));
     }
 
     @Test
     void readById() {
-//        given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        SubjectRequest subjectRequest = new SubjectRequest();
-        subjectRequest.setName("Math");
-        subjectService.create(subjectRequest);
+        // when
+        when(subjectRepository.findById(subject1.getId())).thenReturn(Optional.of(subject1));
+        Subject actual = subjectService.findById(subject1.getId());
 
-//         when
-        when(subjectRepository.findById(subject.getId())).thenReturn(Optional.of(subject));
-        Subject actual = subjectService.findById(subject.getId());
-
-//        then
-        assertThat(actual).isEqualTo(subject);
+        // then
+        assertThat(actual).isEqualTo(subject1);
     }
 
     @Test
     void notReadById() {
         //given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        SubjectRequest subjectRequest = new SubjectRequest();
-        subjectRequest.setName("Math");
-        subjectService.create(subjectRequest);
+        subjectService.create(subjectRequest1);
 
         //then
         assertThrowsExactly(EntityNotFoundException.class, () -> subjectService.findById(-1));
@@ -104,187 +115,126 @@ class SubjectServiceImplTest {
 
     @Test
     void update() {
-        //given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        SubjectRequest subjectRequest = new SubjectRequest();
-        subjectRequest.setName("Math");
         //when
-        when(subjectRepository.findById(subject.getId())).thenReturn(Optional.of(subject));
-        when(subjectRepository.save(subject)).thenReturn(subject);
+        when(subjectRepository.findById(subject1.getId())).thenReturn(Optional.of(subject1));
+        when(subjectRepository.save(subject1)).thenReturn(subject1);
 
-        Subject updatedSubject = subjectService.update(subject.getId(), subjectRequest);
+        Subject updatedSubject = subjectService.update(subject1.getId(), subjectRequest1);
 
         //then
-        assertEquals(subject, updatedSubject);
-        verify(subjectRepository, times(1)).findById(subject.getId());
-        verify(subjectRepository, times(1)).save(subject);
+        assertEquals(subject1, updatedSubject);
+        verify(subjectRepository, times(1)).findById(subject1.getId());
+        verify(subjectRepository, times(1)).save(subject1);
 
     }
 
     @Test
     void updateWithExistsSubject() {
-        //given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        subject.setId(0);
-        Subject subject2 = new Subject();
-        subject2.setName("Art");
-        subject2.setId(1);
-        SubjectRequest subjectRequest = new SubjectRequest();
-        subjectRequest.setName("Math");
         // when
-        subjectRepository.save(subject);
+        subjectRepository.save(subject1);
         subjectRepository.save(subject2);
-        when(subjectRepository.findByName("Math")).thenReturn(Optional.of(subject));
-        when(subjectRepository.findById((long)1)).thenReturn(Optional.of(subject2));
+        when(subjectRepository.findByName(subject1.getName())).thenReturn(Optional.of(subject1));
+        when(subjectRepository.findById(subject2.getId())).thenReturn(Optional.of(subject2));
 
-        assertThrowsExactly(EntityExistsException.class, () -> subjectService.update(1, subjectRequest));
+        assertThrowsExactly(EntityExistsException.class, () -> subjectService.update(subject2.getId(), subjectRequest1));
 
     }
 
     @Test
     void setTeacher() {
-        // given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        subject.setId(0);
-        Teacher teacher = new Teacher(new User("Vladobrod", "Vlad", "Bulakovskyi", "Vlad123"));
-        teacher.setId(0);
-
         // when
-        when(subjectRepository.findById((long)0)).thenReturn(Optional.of(subject));
-        when(teacherService.findById(0)).thenReturn(teacher);
+        when(subjectRepository.findById(subject1.getId())).thenReturn(Optional.of(subject1));
+        when(teacherService.findById(teacher.getId())).thenReturn(teacher);
         // then
-        subjectService.setTeacher(subject.getId(), teacher.getId());
-        verify(subjectRepository, times(1)).save(subject);
-        verify(teacherService, times(1)).findById(0);
-        verify(subjectRepository, times(1)).findById((long)0);
+        subjectService.setTeacher(subject1.getId(), teacher.getId());
+        verify(subjectRepository, times(1)).save(subject1);
+        verify(teacherService, times(1)).findById(teacher.getId());
+        verify(subjectRepository, times(1)).findById(subject1.getId());
     }
 
     @Test
     void deleteTeacher() {
         // given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        subject.setId(0);
-        subject.setTeacher(new Teacher(new User("Vladobrod", "Vlad", "Bulakovskyi", "Vlad123")));
-
+        subject1.setTeacher(teacher);
         // when
-        when(subjectRepository.findById((long)0)).thenReturn(Optional.of(subject));
+        when(subjectRepository.findById(subject1.getId())).thenReturn(Optional.of(subject1));
         // then
-        subjectService.deleteTeacher(subject.getId());
-        verify(subjectRepository, times(1)).save(subject);
-        verify(subjectRepository, times(1)).findById((long)0);
+        subjectService.deleteTeacher(subject1.getId());
+        verify(subjectRepository, times(1)).save(subject1);
+        verify(subjectRepository, times(1)).findById(subject1.getId());
     }
 
     @Test
     void addStudent() {
         // given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        subject.setId(0);
-        subject.setStudents(new ArrayList<>());
-        subject.setTeacher(new Teacher(new User("Vladobrod2", "Vlad", "Bulakovskyi", "Vlad123")));
-        Student student = new Student(new User("Vladobrod", "Vlad", "Bulakovskyi", "Vlad123"));
-        student.setId(0);
+        subject1.setStudents(new ArrayList<>());
+        subject1.setTeacher(teacher);
         // when
-        when(subjectRepository.findById((long)0)).thenReturn(Optional.of(subject));
-        when(studentService.findById(0)).thenReturn(student);
+        when(subjectRepository.findById(subject1.getId())).thenReturn(Optional.of(subject1));
+        when(studentService.findById(student.getId())).thenReturn(student);
         // then
-        subjectService.addStudent(subject.getId(), student.getId());
-        verify(subjectRepository, times(1)).save(subject);
-        verify(subjectRepository, times(1)).findById((long)0);
-        verify(studentService, times(1)).findById(0);
+        subjectService.addStudent(subject1.getId(), student.getId());
+        verify(subjectRepository, times(1)).save(subject1);
+        verify(subjectRepository, times(1)).findById(subject1.getId());
+        verify(studentService, times(1)).findById(student.getId());
     }
 
     @Test
     void addStudentAlreadyHaveStudent() {
         // given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        subject.setId(0);
-        Student student = new Student(new User("Vladobrod", "Vlad", "Bulakovskyi", "Vlad123"));
-        student.setId(0);
-        subject.setStudents(new ArrayList<>(Arrays.asList(student)));
+        subject1.setStudents(new ArrayList<>(List.of(student)));
         // when
-        when(subjectRepository.findById((long)0)).thenReturn(Optional.of(subject));
-        when(studentService.findById(0)).thenReturn(student);
+        when(subjectRepository.findById(subject1.getId())).thenReturn(Optional.of(subject1));
+        when(studentService.findById(student.getId())).thenReturn(student);
         // then
-        assertThrowsExactly(UnsupportedOperationException.class, () -> subjectService.addStudent(subject.getId(), student.getId()));
-        verify(subjectRepository, never()).save(subject);
-        verify(subjectRepository, times(1)).findById((long)0);
-        verify(studentService, times(1)).findById(0);
+        assertThrowsExactly(UnsupportedOperationException.class, () -> subjectService.addStudent(subject1.getId(), student.getId()));
+        verify(subjectRepository, never()).save(subject1);
+        verify(subjectRepository, times(1)).findById(subject1.getId());
+        verify(studentService, times(1)).findById(student.getId());
     }
 
     @Test
     void deleteStudent() {
         // given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        subject.setId(0);
-        Student student = new Student(new User("Vladobrod", "Vlad", "Bulakovskyi", "Vlad123"));
-        student.setId(0);
-        subject.setStudents(new ArrayList<>(Arrays.asList(student)));
+        subject1.setStudents(new ArrayList<>(List.of(student)));
         // when
-        when(subjectRepository.findById((long)0)).thenReturn(Optional.of(subject));
-        when(studentService.findById(0)).thenReturn(student);
+        when(subjectRepository.findById(subject1.getId())).thenReturn(Optional.of(subject1));
+        when(studentService.findById(student.getId())).thenReturn(student);
         // then
-        subjectService.deleteStudent(subject.getId(), student.getId());
-        verify(subjectRepository, times(1)).save(subject);
-        verify(subjectRepository, times(1)).findById((long)0);
-        verify(studentService, times(1)).findById(0);
+        subjectService.deleteStudent(subject1.getId(), student.getId());
+        verify(subjectRepository, times(1)).save(subject1);
+        verify(subjectRepository, times(1)).findById(subject1.getId());
+        verify(studentService, times(1)).findById(student.getId());
     }
 
     @Test
     void deleteStudentHaveNotStudent() {
         // given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        subject.setId(0);
-        Student student = new Student(new User("Vladobrod", "Vlad", "Bulakovskyi", "Vlad123"));
-        student.setId(0);
-        subject.setStudents(new ArrayList<>());
+        subject1.setStudents(new ArrayList<>());
         // when
-        when(subjectRepository.findById((long)0)).thenReturn(Optional.of(subject));
-        when(studentService.findById(0)).thenReturn(student);
+        when(subjectRepository.findById(subject1.getId())).thenReturn(Optional.of(subject1));
+        when(studentService.findById(student.getId())).thenReturn(student);
         // then
-        assertThrowsExactly(UnsupportedOperationException.class, () -> subjectService.deleteStudent(subject.getId(), student.getId()));
-        verify(subjectRepository, never()).save(subject);
-        verify(subjectRepository, times(1)).findById((long)0);
-        verify(studentService, times(1)).findById(0);
+        assertThrowsExactly(UnsupportedOperationException.class, () -> subjectService.deleteStudent(subject1.getId(), student.getId()));
+        verify(subjectRepository, never()).save(subject1);
+        verify(subjectRepository, times(1)).findById(subject1.getId());
+        verify(studentService, times(1)).findById(student.getId());
     }
 
     @Test
     void delete() {
-        //given
-        Subject subject = new Subject();
-        subject.setName("Math");
-        SubjectRequest subjectRequest = new SubjectRequest();
-        subjectRequest.setName("Math");
-        subjectService.create(subjectRequest);
-
         //when
-        when(subjectRepository.findById(subject.getId())).thenReturn(Optional.of(subject));
-        subjectService.delete(subject.getId());
+        when(subjectRepository.findById(subject1.getId())).thenReturn(Optional.of(subject1));
+        subjectService.delete(subject1.getId());
 
         //then
-        verify(subjectRepository, times(1)).findById(subject.getId());
-        verify(subjectRepository, times(1)).delete(subject);
+        verify(subjectRepository, times(1)).findById(subject1.getId());
+        verify(subjectRepository, times(1)).delete(subject1);
     }
 
     @Test
     void getAllByOrderByName() {
         //given
-        SubjectRequest subjectRequest1 = new SubjectRequest();
-        subjectRequest1.setName("Math");
-        SubjectRequest subjectRequest2 = new SubjectRequest();
-        subjectRequest2.setName("Art");
-
-        Subject subject1 = new Subject();
-        subject1.setName("Math");
-        Subject subject2 = new Subject();
-        subject2.setName("Art");
         List<SubjectRequest> subjectRequests = List.of(
                 subjectRequest1,
                 subjectRequest2
@@ -321,19 +271,9 @@ class SubjectServiceImplTest {
 
     @Test
     void findByName() {
-        //given
-        Subject subject1 = new Subject("Math");
-        SubjectRequest subjectRequest1 = new SubjectRequest();
-        subjectRequest1.setName("Math");
-        SubjectRequest subjectRequest2 = new SubjectRequest();
-        subjectRequest2.setName("Philosophy");
-
-        subjectService.create(subjectRequest1);
-        subjectService.create(subjectRequest2);
-
         //when
-        when(subjectRepository.findByNameContainingIgnoreCase("Math")).thenReturn(List.of(subject1));
-        List<Subject> actual = subjectService.findByNameContaining("Math");
+        when(subjectRepository.findByNameContainingIgnoreCase(subject1.getName())).thenReturn(List.of(subject1));
+        List<Subject> actual = subjectService.findByNameContaining(subject1.getName());
 
         //then
         assertThat(actual).isEqualTo(List.of(subject1));
@@ -356,18 +296,12 @@ class SubjectServiceImplTest {
 
     @Test
     void findByTeacher_Id() {
-        //given
-        Teacher teacher = new Teacher();
+        // given
 
         List<Subject> teacherSubjects = List.of(
-                new Subject("Algebra", teacher),
-                new Subject("Geometry", teacher)
+                subject1,
+                subject2
         );
-
-        SubjectRequest subjectRequest1 = new SubjectRequest();
-        subjectRequest1.setName("Math");
-        SubjectRequest subjectRequest2 = new SubjectRequest();
-        subjectRequest2.setName("Philosophy");
 
         List<SubjectRequest> teacherSubjectRequests = List.of(
                 subjectRequest1,
@@ -375,7 +309,7 @@ class SubjectServiceImplTest {
         );
 
         SubjectRequest subjectRequest3 = new SubjectRequest();
-        subjectRequest3.setName("Philosophy");
+        subjectRequest3.setName("Art");
 
         subjectService.create(teacherSubjectRequests.get(0));
         subjectService.create(teacherSubjectRequests.get(1));
@@ -409,21 +343,18 @@ class SubjectServiceImplTest {
         //given
         Student student = new Student();
         Student anotherStudent = new Student();
-
+        subject1.setStudents(new ArrayList<>());
+        subject2.setStudents(new ArrayList<>());
         List<Subject> studentSubjects = List.of(
-                new Subject("Algebra"),
-                new Subject("Geometry")
+                subject1,
+                subject2
         );
-        SubjectRequest subjectRequest1 = new SubjectRequest();
-        subjectRequest1.setName("Algebra");
-        SubjectRequest subjectRequest2 = new SubjectRequest();
-        subjectRequest2.setName("Geometry");
         studentSubjects.get(0).getStudents().add(student);
         studentSubjects.get(1).getStudents().add(student);
 
-        Subject anotherStudentSubject = new Subject("Philosophy");
+        Subject anotherStudentSubject = new Subject("Art");
         SubjectRequest subjectRequest3 = new SubjectRequest();
-        subjectRequest3.setName("Philosophy");
+        subjectRequest3.setName("Art");
         anotherStudentSubject.getStudents().add(anotherStudent);
 
         subjectService.create(subjectRequest1);
@@ -440,12 +371,7 @@ class SubjectServiceImplTest {
 
     @Test
     void notFindByStudent_Id() {
-        //given
-        SubjectRequest subjectRequest1 = new SubjectRequest();
-        subjectRequest1.setName("Math");
-        SubjectRequest subjectRequest2 = new SubjectRequest();
-        subjectRequest2.setName("Philosophy");
-
+        // given
         subjectService.create(subjectRequest1);
         subjectService.create(subjectRequest2);
 
